2004-04-06  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: failed logins are loggued (message LOGIN_FAILED)
	* debug: functions to debug file descriptos (FD_REGISTER)
	* bugfix: possible unclosed file descriptors in RETR and STOR

2004-04-05  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: site PERM add/change/remove/show
	* bugfix: dynamic_ip=1 not working on win32
	* bugfix: FEAT allowed in login sequence (makes lftp happy)
	* doc: update for commands site link, msg, perm, wipe

2004-04-01  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: %filepath not accessible in event MKDIR
	* bugfix: another try to get correct size for big files on win32
	* bugfix: group homedir containing spaces or tabs destroyed
	at server start (plaintext)
	* bugfix: error in sfv create (size was stored in state)
	* feature: moved file sizes to 64 bits

2004-03-30  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: file cookies not working for POSTUPLOAD event
	* bugfix: problems calling tcl script with arguments
	* feature: added vars_user_{get,set} and interface in tcl

2004-03-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: first service implementation (visual): register/unregister, start/stop
	* cosmetic: cleaned up all tabs in files
	* bugfix: arguments are interpreted on visual
	* bugfix: tls implicit mode broken (initialized twice)

2004-03-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: num_logins broken
	* bugfix: LIST not working at root dir (visual)

2004-03-25  Pierre Chifflier  <pollux@wzdftpd.net>

	* vars: new server vars hide_dotted_files, deny_access_files_uploaded
	* site: new command 'SITE PERM' (Work in Progress !)
	* bugfix: parameters works only for backend 'plaintext'
	* mysql: arguments are parsed correctly now

2004-03-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: segfault when reading permissions in config file

2004-03-22  Pierre Chifflier  <pollux@wzdftpd.net>

	* cookies: filecrc (uploaded\downloaded file crc)